# TRoVe

./: README.md  demo.ipynb  pyproject.toml
data/: sample_data.json
src/trove/: __init__.py  score.py
src/trove/utils/: __init__.py  discover_biases.py  extract_candidate_features.py  video_loading.py
